# ReckLockDiscover

./: .env.example  .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: lint.yml  recklock-discover.yml  tests.yml
agenttrust_scanner/: __init__.py  classifiers.py  cli.py  detectors.py  manifest_export.py  report.py  scanner.py
docs/: architecture.md  detection-rules.md  github-actions.md  manifest-export.md  risk-classification.md
examples/: sample_manifest_export.yaml  sample_scan_report.json  sample_scan_report.md
examples/sample_repo/: README.md  package.json
examples/sample_repo/.github/workflows/: nightly.yml
examples/sample_repo/deploy/: production.sh
examples/sample_repo/src/: chat_agent.py
recklock_scanner/: __init__.py  classifiers.py  cli.py  constants.py  detectors.py  manifest_export.py  manifest_schema.py  models.py  redaction.py  registry_prompts.py  report.py  report_plain_language.py  scanner.py  utils.py
scripts/: sync_workflow_dispatch_default.py
tests/: test_classifiers.py  test_cli_registry_opt_in.py  test_detectors.py  test_manifest_export.py  test_reports.py  test_scanner.py
