[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recklock-discover"
version = "1.0.0"
description = "Static analyzer that finds AI agents, CI/CD workflows, deploy scripts & sensitive paths in your repo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ReckLock Discover contributors" }]
keywords = [
  "agent",
  "security",
  "static-analysis",
  "ci-cd",
  "llm",
  "automation",
  "compliance",
  "inventory",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/agenttrust/recklock-discover"
Documentation = "https://github.com/agenttrust/recklock-discover/blob/main/README.md"
Repository = "https://github.com/agenttrust/recklock-discover"
Issues = "https://github.com/agenttrust/recklock-discover/issues"

[project.scripts]
recklock-discover = "agenttrust_scanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agenttrust_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["agenttrust_scanner", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Typer CLI patterns use factory calls in defaults (`typer.Argument`, `typer.Option`).
extend-ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"agenttrust_scanner/detectors.py" = ["E501"]
